--- a/src/app/components/item/item.component.css
+++ b/src/app/components/item/item.component.css
@@ -3,6 +3,10 @@
     display: flex;
     box-sizing: border-box;
 }
+.row:hover{
+    border-radius: 3px;
+    background: #eee;
+}
 div{
     padding: 5px 0;
 }
@@ -39,4 +43,37 @@ div{
 }
 .completed .total{
     color: #ccc;
+}
+
+.actions button{
+    border: none;
+    font-size: 12px;
+    background-color: red;
+    color: white;
+    padding: 5px;
+    width: 100%;
+    box-sizing: border-box;
+}
+.actions button:hover{
+    background-color: darkred;
+}
+
+@media screen and (max-width: 480px){
+
+    .title{
+        min-width: 30%;
+    }
+    .price,  .total{
+        min-width: 15%;
+        font-size: 12px;
+    }
+    .quantity{
+        min-width: 5%;
+        font-size: 12px;
+    }
+
+    .actions{
+        width: 20%;
+        font-size: 10px;
+    }
 }
