--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,8 +1,10 @@
-<div>
+<div class="main-container">
+    <app-total mensaje="El total es: " [total]="total"></app-total>
     <!--Iterar para cada elemento y poder ver cada uno de los objetos-->
     <app-item 
     *ngFor="let item of items" 
     [item]="item"
-    (deleteItem)="deleteItem($event)"></app-item>
+    (deleteItem)="deleteItem($event)"
+    (toggleItem)="toggleItem($event)"></app-item>
 
 </div>
